<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="Dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>>
    <string name="user_agreement">Пользовательское соглашение</string>"
    <string name="Url_practicum">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="email">ex10x10@yandex.ru</string>
    <string name="email_default_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="refresh">Обновить</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="internet_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="searchHystory">Вы искали</string>
    <string name="clearHistoryButton">Очистить историю</string>
    <string name="albomImg">Обложка альбома</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="yearOfRelease">Год</string>
    <string name="genreOfMusic">Жанр</string>
    <string name="countryOfRelease">Страна</string>
</resources>