<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app_blue"
    android:orientation="vertical"
    android:padding="@dimen/padding_16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_22sp"
        android:textColor="@color/text_color_white"

         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="12dp">

        <Button
            android:id="@+id/search_button"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:textColor="@color/text_color_black"
            android:text="@string/search"
            android:textSize="@dimen/text_size_22sp"
            android:textAllCaps="false"

            android:backgroundTint="@color/button_color_white"
            android:layout_marginBottom="@dimen/button_space_16dp"
            app:cornerRadius="@dimen/corner_radius_20dp"

            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconTint="@color/icon_color" />

        <Button
            android:id="@+id/media_library_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_22sp"
            android:text="@string/media_library"
            android:textAllCaps="false"

            android:backgroundTint="@color/button_color_white"
            android:layout_marginBottom="@dimen/button_space_16dp"
            app:cornerRadius="@dimen/corner_radius_20dp"

            app:icon="@drawable/ic_media_library"
            app:iconTint="@color/icon_color"
            app:iconGravity="textStart" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_22sp"
            android:textAllCaps="false"
            android:text="@string/settings"

            android:backgroundTint="@color/button_color_white"
            app:cornerRadius="@dimen/corner_radius_20dp"

            app:icon="@drawable/ic_settings"
            app:iconTint="@color/icon_color"
            app:iconGravity="textStart" />

    </LinearLayout>

</LinearLayout>
